release/assignment/productcatalog-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
     name: productcatalog-virtual-service
spec:
   hosts:
     - productcatalogservice
   http:
     - fault:
           delay:
             fixedDelay: 5s
             percentage:
                     value: 20
       route:
          - destination:
                host: productcatalogservice
                port:
                  number: 3550
